--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -72,31 +72,31 @@ TODO importante // realtando algo
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
@@ -108,31 +108,31 @@ TODO importante // realtando algo
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
                     </div>
