--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -52,22 +52,14 @@ TODO importante // realtando algo
                 <div
                     class="col-10 offset-col-sm-2 m-0 px-4 justify-content-center align-items-center align-content-center d-flex flex-column mt-3 mb-3">
                     <h2 class="text-black titillium-web-bold mb-4 titleWho">
-                        Quienes Somos
+                        Quienes somos
                     </h2>
                     <p class="titillium-web-regular m-0 p-0">
-                        Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
-                        porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
-                        placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate augue
-                        primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus vehicula leo
-                        nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur, adipiscing elit etiam
-                        habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo vehicula turpis
-                        praesent, sagittis fringilla cras placerat porta nullam diam conubia ac, dapibus gravida
-                        inceptos quisque congue vulputate augue primis phasellus. Imperdiet fermentum orci velit auctor
-                        eros luctus sociis, cursus vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet
-                        consectetur, adipiscing elit etiam habitasse. Justo nostra lacus porttitor convallis nisi
-                        habitasse commodo vehicula turpis praesent, sagittis fringilla cras placerat porta nullam diam
-                        conubia ac, dapibus gravida inceptos quisque congue vulputate augue primis phasellus. Imperdiet
-                        fermentum orci velit auctor eros luctus sociis, cursus vehicula leo nascetur venenatis ultrici
+                        En Feasverse, nos enorgullecemos de ser una plataforma líder que une a celebridades,
+                        influencers, marcas oficiales y usuarios apasionados para ofrecer una experiencia de compra
+                        excepcional. Fundada con la visión de simplificar el acceso a productos auténticos y exclusivos,
+                        nos esforzamos por ofrecer un escaparate virtual donde la autenticidad, la comodidad y la
+                        diversidad se unen.
                     </p>
                 </div>
             </div>
@@ -86,11 +78,16 @@ TODO importante // realtando algo
                         <h2 class="text-white titillium-web-regular mt-2">Fernando Gómez</h2>
                         <!--DESCRIPCION-->
                         <p class="text-white titillium-web-regular text-align-center mt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
-                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
-                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                            vehicula leo nascetur venenatis ultrici
+                            Desde que era joven, siempre he creído en desafiar los límites y hacer realidad los sueños
+                            más audaces. Con una mente inquieta y un espíritu emprendedor, siempre he buscado
+                            oportunidades para crear un impacto significativo en el mundo que nos rodea. Como cofundador
+                            de Feasverse, me apasiona impulsar la innovación y la excelencia en cada aspecto de nuestro
+                            negocio. Mi visión audaz y mi capacidad para pensar fuera de la caja han sido fundamentales
+                            para dar forma a nuestra empresa desde sus humildes comienzos hasta convertirla en una
+                            fuerza disruptiva en el mundo del comercio electrónico. Creo en el poder de la determinación
+                            y la creatividad para superar cualquier obstáculo, y estoy comprometido a seguir liderando
+                            con visión y pasión mientras construimos un futuro brillante para Feasverse y todos aquellos
+                            a quienes servimos.
                         </p>
                     </div>
                 </div>
@@ -104,11 +101,15 @@ TODO importante // realtando algo
                     <div class="containerTextMmber">
                         <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
-                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
-                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                            vehicula leo nascetur venenatis ultrici
+                            Desde que era joven, siempre he sido una apasionada de la innovación y el cambio. Mi mente
+                            creativa y mi pasión por encontrar nuevas formas de hacer las cosas han sido impulsoras de
+                            mi trayectoria profesional. Como cofundadora y directora de innovación de Feasverse, mi
+                            objetivo es desafiar constantemente el status quo y buscar oportunidades para mejorar y
+                            evolucionar nuestro negocio. Me enorgullece liderar iniciativas que impulsan la creatividad
+                            y fomentan la colaboración dentro de nuestro equipo, inspirando a todos a alcanzar su máximo
+                            potencial. Creo en la importancia de mantenerse ágil y adaptable en un mundo en constante
+                            cambio, y estoy comprometida a seguir impulsando la innovación en Feasverse mientras creamos
+                            experiencias excepcionales para nuestros clientes y socios.
                         </p>
                     </div>
                     <!---DIVISION-->
@@ -124,11 +125,15 @@ TODO importante // realtando algo
                     <div class="containerTextMmber">
                         <h2 class="text-white titillium-web-regular mt-2">Emiliano Jacobo</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
-                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
-                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                            vehicula leo nascetur venenatis ultrici
+                            Desde que era niño, siempre he sido un estratega en el corazón. Me fascina analizar los
+                            desafíos desde diferentes ángulos y encontrar soluciones innovadoras que impulsen el éxito a
+                            largo plazo. Como cofundador y director estratégico de Feasverse, mi enfoque meticuloso y mi
+                            habilidad para desarrollar planes sólidos han sido fundamentales para convertir nuestra
+                            visión en una realidad tangible. Me enorgullece liderar un equipo dedicado a encontrar
+                            nuevas formas de satisfacer las necesidades de nuestros clientes y mantenernos a la
+                            vanguardia de la industria. Creo en la importancia de la planificación estratégica y la
+                            ejecución cuidadosa para alcanzar nuestras metas más ambiciosas, y estoy comprometido a
+                            seguir guiando a Feasverse hacia un futuro lleno de éxito y crecimiento sostenible.
                         </p>
                     </div>
                     <div class="lineah2"></div>
@@ -145,17 +150,19 @@ TODO importante // realtando algo
                                 Misión
                             </h2>
                             <p class="titillium-web-regular">
-                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
-                                lacus
-                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
-                                cras
-                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
-                                adipiscing
-                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
-                                vehicula
-                                turpis praesent, sagittis fringilla cras p
+                                En Feasverse, nuestra misión es transformar la experiencia de compra en línea,
+                                ofreciendo a nuestros usuarios acceso rápido, seguro y auténtico a una amplia gama de
+                                productos respaldados por celebridades, influencers y marcas reconocidas. Nos
+                                comprometemos a proporcionar una plataforma confiable donde la autenticidad y la calidad
+                                sean garantizadas, al tiempo que ofrecemos a las marcas una oportunidad para expandir su
+                                alcance y proteger su propiedad intelectual.
+
+                                Nos esforzamos por simplificar el proceso de compra en línea, ofreciendo una interfaz
+                                intuitiva y amigable, acompañada de un servicio al cliente excepcional. A través de
+                                nuestra plataforma, buscamos empoderar a nuestros usuarios para que tomen decisiones
+                                informadas y disfruten de una experiencia de compra transparente y gratificante. En
+                                Feasverse, estamos comprometidos a crear un espacio donde la autenticidad y la
+                                satisfacción del cliente sean siempre nuestra máxima prioridad.
                             </p>
                         </div>
                     </div>
@@ -166,17 +173,19 @@ TODO importante // realtando algo
                                 Visión
                             </h2>
                             <p class="titillium-web-regular">
-                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
-                                lacus
-                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
-                                cras
-                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
-                                adipiscing
-                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
-                                vehicula
-                                turpis praesent, sagittis fringilla cras p
+                                En Feasverse, aspiramos a ser la principal plataforma global donde la autenticidad y la
+                                calidad se encuentran con la comodidad y la diversidad. Visualizamos un mundo donde cada
+                                usuario pueda acceder fácilmente a productos auténticos respaldados por celebridades,
+                                influencers y marcas de renombre, mientras que las marcas encuentran en nosotros un
+                                aliado confiable para expandir su presencia en el mercado y proteger su propiedad
+                                intelectual.
+
+                                Nos esforzamos por ser reconocidos como el destino preferido para aquellos que valoran
+                                la autenticidad, la conveniencia y la variedad en sus experiencias de compra en línea.
+                                Con un compromiso inquebrantable con la integridad, la innovación y la excelencia en el
+                                servicio al cliente, estamos decididos a liderar el camino hacia un mercado digital más
+                                transparente, justo y satisfactorio para todos nuestros usuarios y socios. En Feasverse,
+                                creemos en un futuro donde cada compra sea una expresión de autenticidad y confianza.
                             </p>
                         </div>
                     </div>
@@ -190,17 +199,18 @@ TODO importante // realtando algo
                                 Valores
                             </h2>
                             <p class="titillium-web-regular">
-                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
-                                lacus
-                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
-                                cras
-                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
-                                adipiscing
-                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
-                                vehicula
-                                turpis praesent, sagittis fringilla cras p
+                                En Feasverse, nos regimos por estos valores fundamentales:
+                                <br>
+                                <br>
+                                Autenticidad: Transparencia y honestidad en todo lo que hacemos.
+                                <br>Calidad: Excelencia en productos y servicios.
+                                <br>Innovación: Creatividad y cambio para mejorar continuamente.
+                                <br>Integridad: Actuar con honestidad, ética y respeto.
+                                <br>Compromiso con el cliente: Priorizar la satisfacción del cliente.
+                                <br>Colaboración: Valorar asociaciones sólidas y trabajo en equipo.
+                                <br>Responsabilidad: Actuar de manera ética y sostenible.
+                                <br><br>Estos valores informan cada aspecto de nuestro negocio, asegurando una experiencia
+                                excepcional para nuestros usuarios y relaciones sólidas con socios y comunidades.
                             </p>
                         </div>
                     </div>
@@ -208,20 +218,19 @@ TODO importante // realtando algo
                         <!--CONTENDOR DE NUESTRO COMIENZO-->
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
-                                Nuestro Comienzo
+                                Nuestro comienzo
                             </h2>
                             <p class="titillium-web-regular">
-                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
-                                lacus
-                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
-                                cras
-                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
-                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
-                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
-                                adipiscing
-                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
-                                vehicula
-                                turpis praesent, sagittis fringilla cras p
+                                El inicio de Feasverse fue impulsado por una visión clara y una determinación
+                                inquebrantable. Identificamos una necesidad en el mercado de ofrecer productos
+                                auténticos respaldados por celebridades e influencers en un entorno en línea saturado.
+                                Con un equipo apasionado y comprometido, comenzamos a construir una plataforma web
+                                robusta y centrada en el usuario desde cero. Cada decisión se tomó con el objetivo de
+                                proporcionar una experiencia de compra excepcional, marcada por la autenticidad, la
+                                conveniencia y la confianza. A través de perseverancia y adaptabilidad, superamos
+                                desafíos y nos consolidamos como un actor relevante en el comercio electrónico,
+                                manteniendo siempre nuestro compromiso con la excelencia y la satisfacción del cliente
+                                en el centro de nuestra misión.
                             </p>
                         </div>
                     </div>
