--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -142,13 +142,13 @@
                         <div class="col">
                             <div class="text-center d-flex justify-content-center mt-3 ms-5">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso"
-                                    onclick="showInicio()"><i class="bi bi-send"></i>
+                                    onclick=""><i class="bi bi-send"></i>
                                     Cancelar</button>
                             </div>
                         </div>
                         <div class="col">
                             <div class="text-center d-flex justify-content-center mt-3">
-                                <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso1 "
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso1"
                                     onclick="showInicio()"><i class="bi bi-send"></i>
                                     Iniciar Sesion</button>
                             </div>
