--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -244,7 +244,7 @@ TODO importante // realtando algo
                                     <div class="text-center col-sm-12 col-md-6">
                                         <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
                                                 class="bi bi-send" href="javascript:void(0);"
-                                                onclick="showLoginForm()"></i>
+                                                onclick="showLoginFormRestablecer()"></i>
                                             Restablecer contraseña</button>
                                     </div>
                                 </div>
@@ -257,7 +257,10 @@ TODO importante // realtando algo
     </main>
     <!-- *Llamada al framework de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio público -->
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <script type="text/javascript" src="../../controlador/privado/index.js"></script>
 </body>
 
