--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -205,7 +205,7 @@
         </div>
         <!-- Formulario para olvidaste contraseña, paso 2 -->
         <div class="row 3">
-            <div class="col-sm-8 offset-sm-2">
+            <div class="col-12">
                 <!--Comienzo del formulario del paso 2 del restablecimiento de contraseña -->
                 <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password2"
                     onsubmit="handleLoginFormSubmission(event)">
@@ -256,7 +256,7 @@
         </div>
         <!-- Formulario para olvidaste contraseña, paso 3 -->
         <div class="row 3">
-            <div class="col-sm-8 offset-sm-2">
+            <div class="col-12">
                 <!--Comienzo del formulario del paso tres -->
                 <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="password3">
                     <div class="my-3"></div>
